Added images and results

--- a/views/finalResults.ejs
+++ b/views/finalResults.ejs
@@ -37,11 +37,47 @@
 </style>
 
 <body>
+
+    <div class="container container1">
+        <h1>Rezultate Sondaj</h1>
+    </div>
+
+    <div class="container container1">
+        <h2 style="text-decoration: underline;">Influența alimentației asupra performanței academice</h2>
+        <ul style="text-align: left;">
+            <li>Grupa C are cea mai mare sumă a performanței, indicând o performanță globală mai bună în comparație cu
+                celelalte grupuri.</li>
+            <li>Grupa C are o medie a performanței mai mare decât celelalte grupuri. Acest lucru sugerează că
+                alimentația poate influența performanța.</li>
+            <li>Performanța pare să fie influențată de alimentație.</li>
+            <li>Grupa C prezintă cele mai bune rezultate.</li>
+        </ul>
+        <img src="1.png" alt="">
+    </div>
+
+
+    <div class="container container1">
+        <h2 style="text-decoration: underline;">Influența sportului asupra performanței academice</h2>
+        <ul style="text-align: left;">
+            <li>Performanța pare să fie influențată de sport.</li>
+            <li>Grupa C prezintă cele mai bune rezultate, Acest lucru poate indica un impact pozitiv al sportului asupra
+                performanței academice.</li>
+            <li>Datorită P-value-ului scăzut, acest lucru indică faptul că există o diferență semnificativă între
+                grupurile care practică sport și cele care nu practică în ceea ce privește performanța academică</li>
+            <li>Există diferențe semnificative între mijloacele grupurilor de sport.</li>
+        </ul>
+        <img src="2.png" alt="">
+    </div>
+
+    <div class="container container1">
+        <h2 style="text-decoration: underline;">Tabele Semnificative</h2>
+    </div>
+
     <div class="chartContainer container container1">
         <canvas id="q5"></canvas>
+        <canvas id="q4"></canvas>
     </div>
     <div class="chartContainer container">
-        <canvas id="q4"></canvas>
     </div>
     <div class="chartContainer container">
         <canvas id="q14"></canvas>
