--- a/views/results.ejs
+++ b/views/results.ejs
@@ -69,7 +69,7 @@
     </div>
 
     <div class="container">
-        <button onclick="alert(`Vom reveni in curand cu rezultate!`)">Vezi Rezultate Sondaj</button>
+        <a href="https://sondajstatistica.onrender.com/rezultate"><button>Vezi Rezultate Sondaj</button></a>
     </div>
 
     <div class="container">
@@ -227,6 +227,12 @@
 </body>
 
 <script type="module">
+
+    function sendToResults() {
+        alert("merge")
+        window.location = "https://sondajstatistica.onrender.com/rezultate"
+    }
+
 
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js";
     const firebaseConfig = {
