Added Table Results

--- a/views/finalResults.ejs
+++ b/views/finalResults.ejs
@@ -51,6 +51,11 @@
                 alimentația poate influența performanța.</li>
             <li>Performanța pare să fie influențată de alimentație.</li>
             <li>Grupa C prezintă cele mai bune rezultate.</li>
+            <ul>
+                <li>Grupa A a conținut valorile cuprinse în intervalul 0-14, pentru alimentație.</li>
+                <li>Grupa B a conținut valorile între 15-26.</li>
+                <li>Grupa C între 27-36.</li>
+            </ul>
         </ul>
         <img src="1.png" alt="">
     </div>
@@ -65,6 +70,11 @@
             <li>Datorită P-value-ului scăzut, acest lucru indică faptul că există o diferență semnificativă între
                 grupurile care practică sport și cele care nu practică în ceea ce privește performanța academică</li>
             <li>Există diferențe semnificative între mijloacele grupurilor de sport.</li>
+            <ul>
+                <li>Grupa A a conținut valorile cuprinse în intervalul 0-7, pentru sport.</li>
+                <li>Grupa B a conținut valorile între 8-16.</li>
+                <li>Grupa C între 17-20.</li>
+            </ul>
         </ul>
         <img src="2.png" alt="">
     </div>
